		Added: removeChildByTag. Calls removeChildByTag:cleanup: with cleanup=YES
		Added: removeFromParent. Calls removeFromParentAndCleanup: with cleanup=YES
		Added: removeAllChildren. Calls removeAllChildrenWithCleanup: with cleanup=YES
. [NEW] RenderTexture: Supports "auto rendering" its children to the texture. No need to call being/end
. [FIX] Actions: TargetedAction can be copied. Calls super correctly
		Blink: "stop" restores original "visibility" state
. [FIX] Director: Fixed possible retain cycle with the delegate
. [FIX] Dispatcher: Queueing nested events works as expected (issue #1279, #1410)
. [FIX] Documentation: Fixes DrawingPrimitives doc (issue #1409)
. [FIX] GL Cache: when texture is deleted, it is removed form teh GL cache (issue #1429)
. [FIX] LabelAtlas: Honors the directory of the .plist file when loading the .png file
. [FIX] LabelBMFont: Does not crash if it can't parse the FNT. Instead it logs an error and return nil
. [FIX] LabelTTF: It is possible to set an empty string
. [FIX] Layer: API improvements
		setIsKeyboardEnabled -> setKeyboardEnabled
		setIsMouseEnabled -> setMouseEnabled
		setIsTouchEnabled -> setTouchEnabled
		setIsAccelerometerEnabled -> setAccelerometerEnabled
		Old methods can be called, but are deprecated.
		New way to enable "targeted" touches: [self setTouchMode:kCCTouchOneByOne];
. [FIX] LayerColor: uses correct default blending function (issues #1422 #1423)
. [FIX] Particle: Honors the directory of the .plist file when loading the .png file
. [FIX] Templates: Autoration can be overriden in runtime on iOS 6
		Fixed some grammar errors
. [FIX] Tests: Watermelon With Me uses new Chipmunk API
		Added new JS tests for Chipmunk (Buoyancy, Pyramid, Joints, etc...)
. [FIX] Texture: Improved assert when updating filter on NPOT textures
. [FIX] TextureCache: filenames are standarized before adding them into the cache
. [FIX] TMX Tiled Maps: Resused code is re-initialized in a faster
. [FIX] Touch Delegate: